<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Picross</string>
    <string name="menu_pause">Pauze</string>
    <string name="buttonFillText">Fill</string>
    <string name="buttonCrossText">Cross</string>
    <string name="buttonBlankText">Blank</string>
    <string name="dialog_pause_positive">Ga verder</string>
    <string name="dialog_pause_negative">Stoppen</string>
    <string name="buttonStartGameText">Start Game</string>
    <string name="timePassedString">Time passed: </string>
    <string name="PuzzlePickerText">Please choose the puzzle you wish to play.</string>
    <string name="title_activity_instruction">Game Instructions</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Instruction_Button_Text">Instructions</string>
    <string name="Instruction1_Text">Game Instructions</string>
    <string name="Instruction2_Text">Picross is a small puzzle game, where if you finish the puzzle by placing filled fields, you get an image. </string>
    <string name="Instruction3_Text">A puzzle consists of a grid of empty boxes consisting of rows and columns. On the top and left side of the grid, there are numbers that indicate what the puzzle will look like.</string>
    <string name="Instruction4_Text">With the selection buttons you can choose what should be entered on the grid, you can choose: fill, cross or blank. You can use the fill option to tell the game there should be a filled cell on the clicked position. With the cross option you can indicate the positions where no filled cells are supposed to be. The blank option can be used for clearing crossed cells.</string>
    <string name="Instruction5_Text">If the numbers in a row (like this example) are[3 1], it means that (in this case on a grid of 5x5) that on 1 row, there are 4 filled cells where there is 3 contiguous filled cells and a single filled cell in a row. If done so with all the numbers from the puzzle there wil be an image.</string>
    <string name="Instruction6_Text">in the puzzle selection screen you can choose the puzzle gridsize by clicking on the dropdownbox, by selecting an other gridsize you can change the puzzlelist. All lists contains different puzzles.</string>
    <string name="title_activity_high_score">HiActivity</string>
    <string name="spinner_title">puzzlepicker</string>
    <string name="dialog_highscore_name_hint">Please enter your name</string>
    <string name="dialog_highscore_button_dontsave">Don\'t save</string>
    <string name="dialog_highscore_button_save">Save</string>
    <string name="dialog_highscore_text_place">Place</string>
    <string name="dialog_highscore_text_name">Name</string>
    <string name="dialog_highscore_text_score">Score</string>
    <string name="levelPickPlay">Start</string>
    <string name="levelPickHS">Highscores</string>
    <string name="levelSelected">Selected Level:  \t  </string>
    <string name="dialog_highscore_text_time">Time</string>
    <string name="dialog_highscore_text_your_time_was">"Your time was: "</string>



</resources>
