<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/timePassedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PuzzlePickerText"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/levelPickerList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice" >

    </ListView>
	
	<View
    android:layout_width="fill_parent"
    android:layout_height="1dip"
    android:background="?android:attr/dividerVertical" />
    
    <LinearLayout
        android:id="@+id/linearLayoutKnoppen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/buttonHS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:text="@string/levelPickHS"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:text="@string/levelPickPlay"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>