<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <nl.saxion.act.playground.GameView
        android:keepScreenOn="true"
        android:id="@+id/game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#FFF" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/game"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/buttonFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onButtonClicked"
            android:text="@string/buttonFillText" />

        <RadioButton
            android:id="@+id/buttonCross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="@string/buttonCrossText" />

        <RadioButton
            android:id="@+id/buttonBlank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="@string/buttonBlankText" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1" >

        <nl.saxion.act.playground.TimerView
            android:id="@+id/timerView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </nl.saxion.act.playground.TimerView>

    </LinearLayout>

</RelativeLayout>